# UniqueNames

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
names_holder_lib/: CMakeLists.txt
names_holder_lib/include/: names_holder.h
names_holder_lib/src/: names_holder.cpp
tests/integr/: test_app.py
tests/unit/: CMakeLists.txt  test.cpp
